syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.giuliapais.robotsnetwork.comm";

service GracefulExit {
  rpc SayGoodbye (GoodbyeMessage) returns (GoodbyeAck) {}
}

message GoodbyeMessage {
  int32 robotId = 1;
  int64 timestamp = 2;
}

message GoodbyeAck {
  int32 robotId = 1;
  int64 timestamp = 2;
}
